--- a/latex/header.tex
+++ b/latex/header.tex
@@ -1,4 +1,7 @@
 \usepackage{caption}
-
 \captionsetup{justification=raggedright,singlelinecheck=false}
+
+\usepackage{lscape}
+\newcommand{\blandscape}{\begin{landscape}}
+\newcommand{\elandscape}{\end{landscape}}
 
